--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
 		"svelte": "^5.49.2",
 		"tailwindcss": "^4.1.18",
 		"vite": "^7.3.1"
+	},
+	"dependencies": {
+		"@lucide/svelte": "^0.563.1"
 	}
 }
